# Benomar2022

./: Readme.md
Data/: Readme.md
Data/External_data/HMI-fits-data/: README.md  a1_nu.ps  a2_nu.ps  a3_nu.ps  hmi-2020.m18.txt  hmi-2020.m6.txt  hmi-2020.m6.txt.sav  process_hmidata.pro  write_on_ps_off.pro  write_on_ps_on.pro
Data/External_data/Pinsonnault2012/: ReadMe
Data/Figures_publish/version_2/: .readme
Programs/: Readme.md
Programs/Alm/: README.md
Programs/Final-Analysis-Tools/: a2CF_a2AR.py  aj_bias_analysis.py  aj_model_analysis.py  check_aj_linearity.py  eval_aj_range.py  fit_a2sig.py  nice_hist.py  read_activity_outputs_emcee.py  read_activity_outputs_tamcmc.py  read_aj_mcmcdata.py  show_butterflydiag.py  show_pdf_activity.py  show_pdf_aj_obs.py
Programs/Final-Analysis-Tools/cpp_prg/: Readme.md
Programs/PostTAMCMC-C-IDL/: README.md
Programs/PostTAMCMC-C-IDL/idl_source/: MS_Global_amplitudes.pro  MS_Global_height_l.pro  (+10 more)
Programs/Spectra-Simulator-C-1.0.3/: specsim  version.h
Programs/TAMCMC-C-1.83.8/: README.md
Programs/acoef_analysis/: README.md  a2CF_a2AR.py  acoefs.py  acoefs_effects.py  activity.py  aj_bias_analysis.py  check_aj_linearity.py  main.py  make_Alm_grid.py  nice_hist.py  read_activity_outputs_emcee.py  read_aj_mcmcdata.py  read_outputs_tamcmc.py  show_aj_fct_theta_delta.py  show_butterflydiag.py  show_pdf_activity.py  show_pdf_aj_obs.py
Programs/aj_visuals/: CMakeLists.txt  Readme.md  lorentzian_test  show_aj_l12.py
Programs/plot_Refstar/: Readme.md  plot_16CygA.py
Programs/plot_bestfit/: Readme.md  main.py  proba_calc_smooth_signal.pro  read_outputs_tamcmc.py  show_bestfit.py  signal_significance_chi2p.py
Referee/version_2/: Note.txt  read_inertia.py
(+339 files in other folders)
